# AccessAI

./: .gitignore  README.md  pyproject.toml  test.html
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  data.js  index.js
frontend/src/components/: AccessibilityScore.js  CodeView.js  Comparison.js  Editor.js  GradientBackground.js  Header.js  Loader.js  Recommendations.js  ScoreCard.js  ToggleComparison.js  UrlInput.js  UrlInputForm.js  WebpageView.js
frontend/src/components/Improvements/: AccesibilityScore.js  ImagesNoAltText.js  IncorrectHeadingHierarchy.js  KeyboardNavigation.js  MissingAriaLabels.js  WrongContrast.js
frontend/src/layout/: main.js
frontend/src/pages/: HomePage.js  ReportPage.js
frontend/src/routes/: AppRoutes.js
frontend/src/utils/: axios.js
playground/: alt_text_generator.py  color.py  selenium_test.py
scripts/: .env  app.py  improve_contrast.py  improve_contrast_func.js  pyproject.toml
scripts/playground/: accessibility_score.py  alt_text_generator.py  aria_label.py  color.py  heading_improver.py  keyboard_navigation_checker.py  selenium_test.py  tag_improver.py  utils.py
