[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "axe-selenium-python>=2.1.6",
    "bs4>=0.0.2",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "groq>=0.15.0",
    "pillow>=11.1.0",
    "playwright>=1.49.1",
    "requests>=2.32.3",
    "selenium>=4.27.1",
    "python-dotenv>=1.0.1",
    "torch>=2.5.1",
    "transformers>=4.48.0",
]
