[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "groq>=0.15.0",
    "numpy>=2.2.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "playwright>=1.49.1",
    "python-dotenv>=1.0.1",
    "scikit-image>=0.25.0",
    "torch>=2.5.1",
    "transformers>=4.48.0",
]
